--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "deploy": "^1.0.3",
     "firebase": "^9.17.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
@@ -26,8 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy":"gh-pages -d build",
-    "predeploy":"npm run build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +50,5 @@
   "devDependencies": {
     "tailwindcss": "^3.2.6"
   },
-  "homepage":"https://liondot.github.io/bulid_netflex/"
+  "homepage": "https://liondot.github.io/bulid_netflex"
 }
